# carrot

./: .dockerignore  .env.example  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  UserGuide.md  bumpversion.sh  carrot.example.yml  dev.env  diesel.toml
.github/: unit-tests.yml
.github/workflows/: unit-tests.yml
carrot_cli/: .gitignore  README.md  dev-requirements.txt  setup.py  test-requirements.txt  tox.ini
carrot_cli/docs/: _config.yml  commands.md  index.md
carrot_cli/docs/commands/: config.md  pipeline.md  report.md  result.md  run.md  software.md  subscription.md  template.md  test.md
carrot_cli/src/carrot_cli/: __main__.py  command_util.py  dependency_util.py  email_util.py  file_util.py  log.py  software_version_query_util.py
carrot_cli/tests/data/: eval.wdl  mock_eval_input.json  mock_eval_options.json  mock_eval_wdl.wdl  mock_report_config.json  mock_report_notebook.ipynb  mock_report_results.json  mock_test_input.json  mock_test_options.json  mock_test_wdl.wdl  test.wdl
carrot_cli/tests/unit/: test_dependency_util.py  test_email_util.py
docs/: _config.yml  index.md  rest_api.md
docs/rest_api/: pipeline.md  schema.md
migrations/2020-03-16-180224_create_main_tables/: down.sql  up.sql
migrations/2020-03-24-144547_runs_and_results/: down.sql  up.sql
migrations/2020-07-09-133814_subscriptions/: down.sql  up.sql
migrations/2020-07-29-175403_software_and_builds/: down.sql  up.sql
migrations/2020-10-13-175244_github_integration/: down.sql  up.sql
migrations/2020-10-30-154549_separate_wdls/: down.sql  up.sql
migrations/2021-01-06-151849_main_table_foreign_keys/: down.sql  up.sql
migrations/2021-01-29-202225_reports/: down.sql  up.sql
migrations/2021-07-12-192219_wdl_hashes/: down.sql  up.sql
migrations/2022-01-31-204144_options_json/: down.sql  up.sql
migrations/2022-02-10-194502_wdl_dependencies/: down.sql  up.sql
migrations/2022-03-02-143832_run_error_log/: down.sql  up.sql
migrations/2022-06-15-145542_software_machine_type/: down.sql  up.sql
migrations/2022-06-30-151515_run_groups/: down.sql  up.sql
migrations/2022-08-01-190723_report_mapping_trigger/: down.sql  up.sql
migrations/2022-10-27-192932_software_version_tags/: down.sql  up.sql
migrations/2022-11-14-203415_querying_by_software/: up.sql
migrations/2022-11-29-183402_wdls_in_runs/: down.sql  up.sql
migrations/2022-12-12-153700_querying_by_software/: down.sql  up.sql
scripts/docker/: Dockerfile  docker-compose.yml
scripts/docker/db/: Dockerfile  init.sh
scripts/docker/reports/: Dockerfile
scripts/docker/test/: Dockerfile  docker-compose.yml
scripts/wdl/: docker_build.wdl  docker_build_with_github_auth.wdl  jupyter_report_generator_template.wdl
src/: app.rs  cli.rs  config.rs  custom_sql_types.rs  db.rs  error_body.rs  main.rs  run_error_logger.rs  schema.rs  unit_test_util.rs  util.rs
src/clients/: cromwell_client.rs  mod.rs
src/manager/: gcloud_subscriber.rs  github_runner.rs  mod.rs  notification_handler.rs  report_builder.rs  software_builder.rs  status_manager.rs  test_runner.rs  util.rs
src/manager/github/: github_pr_request.rs  github_run_request.rs  mod.rs  util.rs
src/models/: mod.rs  pipeline.rs  report.rs  report_map.rs  report_section.rs  result.rs  run.rs  run_error.rs  run_group.rs  run_group_is_from_github.rs  run_group_is_from_query.rs  run_in_group.rs  run_is_from_github.rs  run_report.rs  run_result.rs  run_software_version.rs  section.rs  software.rs  software_build.rs  software_version.rs  software_version_tag.rs  sql_functions.rs  subscription.rs  template.rs  template_report.rs  template_result.rs  template_software.rs  test.rs  unit_test_util.rs  wdl_hash.rs
src/models/pipeline/: mod.rs  model.rs  routes.rs
src/models/template/: model.rs  routes.rs
src/notifications/: emailer.rs  github_commenter.rs  mod.rs
src/requests/: cromwell_requests.rs  gcloud_storage.rs  github_requests.rs  mod.rs  test_resource_requests.rs
src/routes/: config.rs  disabled_features.rs  error_body.rs  error_handling.rs  mod.rs  multipart_handling.rs  pipeline.rs  report.rs  report_map.rs  report_section.rs  result.rs  run.rs  run_group.rs  run_report.rs  section.rs  software.rs  software_build.rs  software_version.rs  software_version_query_for_run.rs  subscription.rs  template.rs  template_report.rs  template_result.rs  template_software.rs  test.rs  unit_test_util.rs  util.rs
src/storage/: gcloud_storage.rs  mod.rs
src/util/: git_repos.rs  gs_uri_parsing.rs  json_parsing.rs  mod.rs  python_dict_formatter.rs  run_csv.rs  sort_string.rs  temp_storage.rs  uri_conversion.rs  wdl_storage.rs  wdl_type.rs
src/validation/: mod.rs  wdl_validator.rs  womtool.rs
src/wdl/: combiner.rs  mod.rs  parser.rs  womtool_util.rs
testdata/: mock_gcloud_sa_key_file.json  parsed_wdl_to_parse.txt  test.env  test_config.yml  wdl_to_parse.wdl
testdata/manager/report_builder/: different_report_notebook.ipynb  eval.wdl  expected_report_generator.wdl  report_notebook.ipynb  report_notebook_with_control_block.ipynb  test.wdl
testdata/manager/test_runner/: eval_wdl_no_software_params.wdl  eval_wdl_software_params.wdl  test_wdl_no_software_params.wdl  test_wdl_software_params.wdl
testdata/routes/multipart_handling/: example_multipart.txt
testdata/routes/report_map/: report_notebook.ipynb
tests/: run_tests.rs
wdl/: Cargo.toml
wdl/src/: call.rs  call_input.rs  declaration.rs  error.rs  import.rs  lib.rs  output.rs  workflow.rs
(+96 files in other folders)
