[package]
name = "carrot"
version = "0.1.0"
authors = ["Kevin Lydon <klydon@broadinstitute.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
actix-web = { version = "2.0.0", features=["openssl"] }
actix-rt = "1.0.0"
actix-service = "1.0.5"
actix-codec = "0.2.0"
actix-multipart-rfc7578 = "0.3.0-rc" # For sending files in requests
# For SSL requests
openssl = "0.10"
# Environment variables
dotenv = "0.15.0"
# Logging
env_logger = "0.7.1"
log = "0.4.8"
# DB connection and pooling
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "uuidv07", "chrono", "serde_json"] }
diesel_migrations = "1.4.0"
postgres = { version = "0.17.1", features = ["with-uuid-0_8", "with-chrono-0_4"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
r2d2 = "0.8.8"
# Serializing/Deserializing data
serde = "1.0.104"
serde_json = "1.0.48"
serde_urlencoded = "0.6.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"]}
# For merging JSONs
json-patch = "*"
# For loading static configuration info
lazy_static = "1.4.0"
# For creating temporary files for processing WDLs
tempfile = "3.1.0"
# For some string parsing/matching
regex = "1"
# To simplify future handling a bit
futures = "0.3.5"
# To handle CTRL-C(SIGINT) signals
ctrlc = "3.1.4"

[dev-dependencies]
# For generating random values in test data
rand = "0.7.3"
# For testing functions that make http requests
mockito = "0.25.2"

