[package]
name = "carrot"
version = "0.5.1"
authors = ["Kevin Lydon <klydon@broadinstitute.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
actix-web = { version = "^3.3.2", features=["openssl"] }
actix-rt = "1.0.0"
actix-service = "1.0.5"
actix-codec = "0.3.0"
actix-multipart = "0.3.0" # For receiving multipart data
actix-multipart-rfc7578 = "0.4.0" # For sending files in requests
# For SSL requests
openssl = "0.10"
# Environment variables
dotenv = "0.15.0"
# Logging
simple_logger = "1.16"
log = { version = "0.4.14", features = ["serde"] }
# DB connection and pooling
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "uuidv07", "chrono", "serde_json"] }
diesel_migrations = "1.4.0"
postgres = { version = "0.17.1", features = ["with-uuid-0_8", "with-chrono-0_4"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
r2d2 = "0.8.8"
# Serializing/Deserializing data
serde = "1.0.104"
serde_json = "1.0.48"
serde_urlencoded = "0.7"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"]}
# For merging JSONs
json-patch = "^0.2.6"
# For loading static configuration info
lazy_static = "1.4.0"
# For creating temporary files for processing WDLs
tempfile = "3.1.0"
# For some string parsing/matching
regex = "1.5.5"
# To simplify future handling a bit
futures = "0.3.5"
# To handle CTRL-C(SIGINT) signals
ctrlc = "3.2.2"
# For validating user input (particularly email addresses)
validator = "0.10.1"
# For sending emails
lettre = "0.9"
lettre_email = "0.9"
# For minor multithreading tasks
threadpool = "1.0"
# For pulling from a Google Cloud Pub/Sub subscription
google-pubsub1 = "^1.0"
yup-oauth2 = "^1.0"
# Necessary for using the google libraries
hyper = "^0.10"
hyper-rustls = "^0.6"
# For decoding pubsub messages
base64 = "^0.13"
# For interacting with data stored in Google Cloud Storage
google-storage1 = "^1.0"
# For url encoding (necessary for interacting with the Google Cloud Storage API)
percent-encoding = "2.1.0"
# For hashing wdl contents
sha2 = "0.9"
# For command line arg parsing
clap = "2.33"
# For extracting wdl dependency archives for validation
zip = "0.5"
# For generating csv files from model data
csv = "^1.1"

[dev-dependencies]
# For generating random values in test data
rand = "0.7.3"
# For testing functions that make http requests
mockito = "0.30"
# For parsing test emails
mailparse = "0.13.0"
serde_bytes = "0.11"
# For testing multipart parsing
tokio = { version = "1.8.4", features = ["sync"] }
tokio-stream = "0.1"
futures-core = { version = "0.3.7", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.7", default-features = false, features = ["alloc"] }

